fix: remove target

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -22,7 +22,7 @@
             <nav class="header-nav">
                 <ul class="header-ul">
                     <li class="header-li"><a href="#" class="header-link bottom">About the shelter</a></li>
-                    <li class="header-li"><a href="../pets/index2.html" class="header-link" target="blank">Our pets</a>
+                    <li class="header-li"><a href="../pets/index2.html" class="header-link">Our pets</a>
                     </li>
                     <li class="header-li"><a href="#help" class="header-link">Help the shelter</a></li>
                     <li class="header-li"><a href="#contacts" class="header-link">Contacts</a></li>
@@ -257,7 +257,7 @@
                             <img src="../../assets/icons/arrow2.svg" alt="arrow-next">
                         </button>
                     </div>
-                    <form action="../pets/index2.html" target="_blank">
+                    <form action="../pets/index2.html">
                         <button class="our-friends-button our-friends-link">Get
                             to
                             know the
@@ -344,18 +344,9 @@
                     <div class="in-addition-content">
                         <h2 class="in-addition-title">You can also<br>make a donation</h2>
                         <p class="in-addition-text">Name of the bank / Type of bank account</p>
-                        <!-- <form action="#no_scroll">
-                            <button class="credit-button credit-icon credit-link">8380 2880 8028 8791
-                                7435</button>
-                        </form> -->
-                        <!-- <a href="javascript:void(0)" class="donation-link">
-                            <img src="../../assets/images/credit-card.svg" alt="credit card">
-                            <span>8380 2880 8028 8791 7435</span>
-                        </a> -->
-                        <!-- <div class="credit-button credit-icon"> -->
-                        <a href="javascript:void(0)" class="credit-link credit-button credit-icon">8380 2880 8028 8791
-                            7435</a>
-                        <!-- </div> -->
+                        <a href="javascript:void(0)" class="credit-link credit-button credit-icon"><span>8380 2880 8028
+                                8791
+                                7435</span></a>
                         <p class="in-addition-text-transparent">Legal information and lorem ipsum dolor sit amet,
                             consectetur adipiscing
                             elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus
