--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -16,11 +16,11 @@
     <header class="header">
         <div class="container header-container">
             <div class="logo">
-                <a href="../main/index.html" class="logo-link-title" target="blank">
+                <a href="../main/index.html" class="logo-link-title">
                     <h1 class="logo-title">Cozy
                         House</h1>
                 </a>
-                <a href="../main/index.html" class="logo-link-subtitle" target="blank">
+                <a href="../main/index.html" class="logo-link-subtitle">
                     <p class="logo-subtitle">Shelter
                         for pets
                         in Boston</p>
@@ -28,10 +28,10 @@
             </div>
             <nav class="header-nav">
                 <ul class="header-ul">
-                    <li class="header-li"><a href="../main/index.html" target="blank" class="header-link">About the
+                    <li class="header-li"><a href="../main/index.html" class="header-link">About the
                             shelter</a></li>
                     <li class="header-li"><a href="#" class="header-link bottom">Our pets</a></li>
-                    <li class="header-li"><a href="../main/index.html#help" target="blank" class="header-link">Help the
+                    <li class="header-li"><a href="../main/index.html#help" class="header-link">Help the
                             shelter</a></li>
                     <li class="header-li"><a href="#contacts" class="header-link">Contacts</a></li>
                 </ul>
