fix: clean code

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -15,6 +15,10 @@
 <body>
     <header class="header">
         <div class="container header-container">
+            <!-- <a href="../main/index.html" class="logo">
+                <h1 class="logo-title">Cozy House</h1>
+                <p class="logo-subtitle">Shelter for pets in Boston</p>
+            </a> -->
             <div class="logo">
                 <h1 class="logo-title">Cozy House</h1>
                 <p class="logo-subtitle">Shelter for pets in Boston</p>
