fix: change size adaptive

--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -71,7 +71,7 @@
                                             alt="katrine">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Katrine</h2>
-                                            <p class="modal-subtitle">Cat - British Shorthair</p>
+                                            <p class="modal-subtitle">Cat&nbsp;-&nbsp;British&nbsp;Shorthair</p>
                                             <p class="modal-text">Katrine is a beautiful girl. She is as soft as the
                                                 finest
                                                 velvet with a thick lush fur. Will love you until the last breath she
@@ -161,7 +161,7 @@
                                         <img src="../../assets/images/pets-woody.jpg" class="modal-image" alt="woody">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Woody</h2>
-                                            <p class="modal-subtitle">Dog - Golden Retriever</p>
+                                            <p class="modal-subtitle">Dog&nbsp;-&nbsp;Golden&nbsp;Retriever</p>
                                             <p class="modal-text">Woody is a handsome 3 1/2 year old boy. Woody does
                                                 know
                                                 basic commands and is a smart pup. Since he is on the stronger side, he
