fix: change px at rem

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -340,7 +340,7 @@
             </div>
         </section>
 
-        <section class="in-addition" id="contacts">
+        <section class="in-addition">
             <div class="container in-addition-container">
                 <div class="in-addition-block">
                     <img src="../../assets/images/donation-dog.png" class="in-addition-image1" alt="donation-dog">
@@ -372,7 +372,7 @@
                     </div>
                     <div class="link-box-contacts">
                         <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts-phone" alt="phone">
-                        <a href="tel:" class="footer-link link-tel">+13 674 567 75 54</a>
+                        <a href="tel:+136745677554" class="footer-link link-tel">+13 674 567 75 54</a>
                     </div>
                 </div>
                 <div class="locations">
