feat: add responsive adaptive

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -20,7 +20,7 @@
                 <p class="logo-subtitle">Shelter for pets in Boston</p>
             </a> -->
             <div class="logo">
-                <h1 class="logo-title">Cozy House</h1>
+                <h1 class="logo-title">Cozy&nbsp;House</h1>
                 <p class="logo-subtitle">Shelter for pets in Boston</p>
             </div>
             <nav class="header-nav">
