--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -17,8 +17,7 @@
         <div class="container header-container">
             <div class="logo">
                 <a href="../main/index.html" class="logo-link-title">
-                    <h1 class="logo-title">Cozy
-                        House</h1>
+                    <h1 class="logo-title">Cozy&nbsp;House</h1>
                 </a>
                 <a href="../main/index.html" class="logo-link-subtitle">
                     <p class="logo-subtitle">Shelter
