feat: add scroll header-link

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -28,7 +28,7 @@
                     <li class="header-li"><a href="#" class="header-link bottom">About the shelter</a></li>
                     <li class="header-li"><a href="../pets/index2.html" class="header-link">Our pets</a>
                     </li>
-                    <li class="header-li"><a href="#help" class="header-link">Help the shelter</a></li>
+                    <li class="header-li"><a href="#help" class="header-link scroll">Help the shelter</a></li>
                     <li class="header-li"><a href="#contacts" class="header-link">Contacts</a></li>
                 </ul>
             </nav>
