feat: add shadow

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -28,10 +28,11 @@
                     <li class="header-li"><a href="#" class="header-link bottom">About the shelter</a></li>
                     <li class="header-li"><a href="../pets/index2.html" class="header-link">Our pets</a>
                     </li>
-                    <li class="header-li"><a href="#help" class="header-link scroll">Help the shelter</a></li>
+                    <li class="header-li"><a href="#help" class="header-link">Help the shelter</a></li>
                     <li class="header-li"><a href="#contacts" class="header-link">Contacts</a></li>
                 </ul>
             </nav>
+            <div class="shadow"></div>
             <div class="hamburger">
                 <span class="line"></span>
                 <span class="line"></span>
@@ -107,19 +108,18 @@
                             <img src="../../assets/icons/arrow1.svg" class="arrow" alt="arrow-previous">
                         </button>
                         <div class="card-box">
-                            <div class="card card1">
+                            <div class="card card1" data-modal="#openModal1">
                                 <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="katrine">
                                 <h4 class="card-name">Katrine</h4>
-                                <form action="#openModal1">
-                                    <button class="card-button card-link">Learn
-                                        more</button>
-                                </form>
+                                <button class="card-button card-link">Learn
+                                    more</button>
                                 <div id="openModal1" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                                    src="../../assets/icons/modal-close.svg" class="close-x"
+                                                    alt=""></button>
                                         </form>
                                         <img src="../../assets/images/pets-katrine.jpg" class="modal-image"
                                             alt="katrine">
@@ -152,19 +152,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card card2">
+                            <div class="card card2" data-modal="#openModal2">
                                 <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="jennifer">
                                 <h4 class="card-name">Jennifer</h4>
-                                <form action="#openModal2">
-                                    <button class="card-button card-link">Learn
-                                        more</button>
-                                </form>
+                                <button class="card-button card-link">Learn
+                                    more</button>
                                 <div id="openModal2" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
+                                                    src="../../assets/icons/modal-close.svg" class="close-x"
+                                                    alt="close"></button>
                                         </form>
                                         <img src="../../assets/images/pets-jennifer.jpg" class="modal-image"
                                             alt="jennifer">
@@ -201,19 +200,18 @@
                                 </div>
 
                             </div>
-                            <div class="card card3">
+                            <div class="card card3" data-modal="#openModal3">
                                 <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="woody">
                                 <h4 class="card-name">Woody</h4>
-                                <form action="#openModal3">
-                                    <button class="card-button card-link">Learn
-                                        more</button>
-                                </form>
+                                <button class="card-button card-link">Learn
+                                    more</button>
                                 <div id="openModal3" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
+                                                    src="../../assets/icons/modal-close.svg" class="close-x"
+                                                    alt="close"></button>
                                         </form>
                                         <img src="../../assets/images/pets-woody.jpg" class="modal-image" alt="woody">
                                         <div class="modal-box">
