--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -35,6 +35,7 @@
                     <li class="header-li"><a href="#contacts" class="header-link">Contacts</a></li>
                 </ul>
             </nav>
+            <div class="shadow"></div>
             <div class="hamburger" id="hamburger">
                 <span class="line"></span>
                 <span class="line"></span>
@@ -52,19 +53,18 @@
                     <div class="our-friends-catalog">
                         <div class="card-box">
 
-                            <div class="card card1">
+                            <div class="card card1" data-modal="#openModal1">
                                 <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="katrine">
                                 <h4 class="card-name">Katrine</h4>
-                                <form action="#openModal1">
-                                    <button class="card-button card-link">Learn
-                                        more</button>
-                                </form>
+                                <button class="card-button card-link">Learn
+                                    more</button>
                                 <div id="openModal1" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
+                                                    src="../../assets/icons/modal-close.svg" class="close-x"
+                                                    alt="close"></button>
                                         </form>
                                         <img src="../../assets/images/pets-katrine.jpg" class="modal-image"
                                             alt="katrine">
@@ -96,19 +96,18 @@
                                 </div>
                             </div>
 
-                            <div class="card card2">
+                            <div class="card card2" data-modal="#openModal2">
                                 <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="jennifer">
                                 <h4 class="card-name">Jennifer</h4>
-                                <form action="#openModal2">
-                                    <button class="card-button card-link">Learn
-                                        more</button>
-                                </form>
+                                <button class="card-button card-link">Learn
+                                    more</button>
                                 <div id="openModal2" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
+                                                    src="../../assets/icons/modal-close.svg" class="close-x"
+                                                    alt="close"></button>
                                         </form>
                                         <img src="../../assets/images/pets-jennifer.jpg" class="modal-image"
                                             alt="jennifer">
@@ -143,19 +142,18 @@
                                 </div>
                             </div>
 
-                            <div class="card card3">
+                            <div class="card card3" data-modal="#openModal3">
                                 <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="woody">
                                 <h4 class="card-name">Woody</h4>
-                                <form action="#openModal3">
-                                    <button class="card-button card-link">Learn
-                                        more</button>
-                                </form>
+                                <button class="card-button card-link">Learn
+                                    more</button>
                                 <div id="openModal3" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
+                                                    src="../../assets/icons/modal-close.svg" class="close-x"
+                                                    alt="close"></button>
                                         </form>
                                         <img src="../../assets/images/pets-woody.jpg" class="modal-image" alt="woody">
                                         <div class="modal-box">
@@ -187,19 +185,18 @@
                                 </div>
                             </div>
 
-                            <div class="card card4">
+                            <div class="card card4" data-modal="#openModal4">
                                 <img src="../../assets/images/pets-sophia.jpg" class="card-image" alt="sophia">
                                 <h4 class="card-name">Sophia</h4>
-                                <form action="#openModal4">
-                                    <button class="card-button card-link">Learn
-                                        more</button>
-                                </form>
+                                <button class="card-button card-link">Learn
+                                    more</button>
                                 <div id="openModal4" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
+                                                    src="../../assets/icons/modal-close.svg" class="close-x"
+                                                    alt="close"></button>
                                         </form>
                                         <img src="../../assets/images/pets-sophia.jpg" class="modal-image" alt="sophia">
                                         <div class="modal-box">
@@ -235,19 +232,18 @@
                     <div class="our-friends-catalog">
                         <div class="card-box">
 
-                            <div class="card card5">
+                            <div class="card card5" data-modal="#openModal5">
                                 <img src="../../assets/images/pets-timmy.jpg" class="card-image" alt="timmy">
                                 <h4 class="card-name">Timmy</h4>
-                                <form action="#openModal5">
-                                    <button class="card-button card-link">Learn
-                                        more</button>
-                                </form>
+                                <button class="card-button card-link">Learn
+                                    more</button>
                                 <div id="openModal5" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
+                                                    src="../../assets/icons/modal-close.svg" class="close-x"
+                                                    alt="close"></button>
                                         </form>
                                         <img src="../../assets/images/pets-timmy.jpg" class="modal-image" alt="timmy">
                                         <div class="modal-box">
@@ -278,19 +274,18 @@
                                 </div>
                             </div>
 
-                            <div class="card card6">
+                            <div class="card card6" data-modal="#openModal6">
                                 <img src="../../assets/images/pets-charly.jpg" class="card-image" alt="charly">
                                 <h4 class="card-name">Charly</h4>
-                                <form action="#openModal6">
-                                    <button class="card-button card-link">Learn
-                                        more</button>
-                                </form>
+                                <button class="card-button card-link">Learn
+                                    more</button>
                                 <div id="openModal6" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
+                                                    src="../../assets/icons/modal-close.svg" class="close-x"
+                                                    alt="close"></button>
                                         </form>
                                         <img src="../../assets/images/pets-charly.jpg" class="modal-image" alt="charly">
                                         <div class="modal-box">
@@ -321,19 +316,18 @@
                                 </div>
                             </div>
 
-                            <div class="card card7">
+                            <div class="card card7" data-modal="#openModal7">
                                 <img src="../../assets/images/pets-scarlet.jpg" class="card-image" alt="scarlet">
                                 <h4 class="card-name">Scarlett</h4>
-                                <form action="#openModal7">
-                                    <button class="card-button card-link">Learn
-                                        more</button>
-                                </form>
+                                <button class="card-button card-link">Learn
+                                    more</button>
                                 <div id="openModal7" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
+                                                    src="../../assets/icons/modal-close.svg" class="close-x"
+                                                    alt="close"></button>
                                         </form>
                                         <img src="../../assets/images/pets-scarlet.jpg" class="modal-image"
                                             alt="scarlet">
@@ -366,19 +360,18 @@
                                 </div>
                             </div>
 
-                            <div class="card card8">
+                            <div class="card card8" data-modal="#openModal8">
                                 <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="freddie">
                                 <h4 class="card-name">Freddie</h4>
-                                <form action="#openModal8">
-                                    <button class="card-button card-link">Learn
-                                        more</button>
-                                </form>
+                                <button class="card-button card-link">Learn
+                                    more</button>
                                 <div id="openModal8" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
+                                                    src="../../assets/icons/modal-close.svg" class="close-x"
+                                                    alt="close"></button>
                                         </form>
                                         <img src="../../assets/images/pets-freddie.jpg" class="modal-image"
                                             alt="freddie">
