feat: change js modal

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -110,9 +110,9 @@
                                 <button class="card-button card-link">Learn
                                     more</button>
                                 <div id="openModal1" class="modal-block">
-                                    <a href="#close" class="close-all"></a>
+                                    <a href="" class="close-all"></a>
                                     <div class="modal-content">
-                                        <form action="#close">
+                                        <form>
                                             <button class="close" title="Закрыть"><img
                                                     src="../../assets/icons/modal-close.svg" class="close-x"
                                                     alt=""></button>
@@ -154,9 +154,9 @@
                                 <button class="card-button card-link">Learn
                                     more</button>
                                 <div id="openModal2" class="modal-block">
-                                    <a href="#close" class="close-all"></a>
+                                    <a href="" class="close-all"></a>
                                     <div class="modal-content">
-                                        <form action="#close">
+                                        <form>
                                             <button class="close" title="Закрыть"><img
                                                     src="../../assets/icons/modal-close.svg" class="close-x"
                                                     alt="close"></button>
@@ -202,9 +202,9 @@
                                 <button class="card-button card-link">Learn
                                     more</button>
                                 <div id="openModal3" class="modal-block">
-                                    <a href="#close" class="close-all"></a>
+                                    <a href="" class="close-all"></a>
                                     <div class="modal-content">
-                                        <form action="#close">
+                                        <form>
                                             <button class="close" title="Закрыть"><img
                                                     src="../../assets/icons/modal-close.svg" class="close-x"
                                                     alt="close"></button>
