--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -59,9 +59,9 @@
                                 <button class="card-button card-link">Learn
                                     more</button>
                                 <div id="openModal1" class="modal-block">
-                                    <a href="#close" class="close-all"></a>
+                                    <a href="" class="close-all"></a>
                                     <div class="modal-content">
-                                        <form action="#close">
+                                        <form>
                                             <button class="close" title="Закрыть"><img
                                                     src="../../assets/icons/modal-close.svg" class="close-x"
                                                     alt="close"></button>
@@ -102,9 +102,9 @@
                                 <button class="card-button card-link">Learn
                                     more</button>
                                 <div id="openModal2" class="modal-block">
-                                    <a href="#close" class="close-all"></a>
+                                    <a href="" class="close-all"></a>
                                     <div class="modal-content">
-                                        <form action="#close">
+                                        <form>
                                             <button class="close" title="Закрыть"><img
                                                     src="../../assets/icons/modal-close.svg" class="close-x"
                                                     alt="close"></button>
@@ -148,9 +148,9 @@
                                 <button class="card-button card-link">Learn
                                     more</button>
                                 <div id="openModal3" class="modal-block">
-                                    <a href="#close" class="close-all"></a>
+                                    <a href="" class="close-all"></a>
                                     <div class="modal-content">
-                                        <form action="#close">
+                                        <form>
                                             <button class="close" title="Закрыть"><img
                                                     src="../../assets/icons/modal-close.svg" class="close-x"
                                                     alt="close"></button>
@@ -191,9 +191,9 @@
                                 <button class="card-button card-link">Learn
                                     more</button>
                                 <div id="openModal4" class="modal-block">
-                                    <a href="#close" class="close-all"></a>
+                                    <a href="" class="close-all"></a>
                                     <div class="modal-content">
-                                        <form action="#close">
+                                        <form>
                                             <button class="close" title="Закрыть"><img
                                                     src="../../assets/icons/modal-close.svg" class="close-x"
                                                     alt="close"></button>
@@ -238,9 +238,9 @@
                                 <button class="card-button card-link">Learn
                                     more</button>
                                 <div id="openModal5" class="modal-block">
-                                    <a href="#close" class="close-all"></a>
+                                    <a href="" class="close-all"></a>
                                     <div class="modal-content">
-                                        <form action="#close">
+                                        <form>
                                             <button class="close" title="Закрыть"><img
                                                     src="../../assets/icons/modal-close.svg" class="close-x"
                                                     alt="close"></button>
@@ -280,9 +280,9 @@
                                 <button class="card-button card-link">Learn
                                     more</button>
                                 <div id="openModal6" class="modal-block">
-                                    <a href="#close" class="close-all"></a>
+                                    <a href="" class="close-all"></a>
                                     <div class="modal-content">
-                                        <form action="#close">
+                                        <form>
                                             <button class="close" title="Закрыть"><img
                                                     src="../../assets/icons/modal-close.svg" class="close-x"
                                                     alt="close"></button>
@@ -322,9 +322,9 @@
                                 <button class="card-button card-link">Learn
                                     more</button>
                                 <div id="openModal7" class="modal-block">
-                                    <a href="#close" class="close-all"></a>
+                                    <a href="" class="close-all"></a>
                                     <div class="modal-content">
-                                        <form action="#close">
+                                        <form>
                                             <button class="close" title="Закрыть"><img
                                                     src="../../assets/icons/modal-close.svg" class="close-x"
                                                     alt="close"></button>
@@ -366,9 +366,9 @@
                                 <button class="card-button card-link">Learn
                                     more</button>
                                 <div id="openModal8" class="modal-block">
-                                    <a href="#close" class="close-all"></a>
+                                    <a href="" class="close-all"></a>
                                     <div class="modal-content">
-                                        <form action="#close">
+                                        <form>
                                             <button class="close" title="Закрыть"><img
                                                     src="../../assets/icons/modal-close.svg" class="close-x"
                                                     alt="close"></button>
