feat: add slider

--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -317,7 +317,7 @@
                             </div>
 
                             <div class="card card7" data-modal="#openModal7">
-                                <img src="../../assets/images/pets-scarlet.jpg" class="card-image" alt="scarlet">
+                                <img src="../../assets/images/pets-scarlett.jpg" class="card-image" alt="scarlett">
                                 <h4 class="card-name">Scarlett</h4>
                                 <button class="card-button card-link">Learn
                                     more</button>
@@ -329,8 +329,8 @@
                                                     src="../../assets/icons/modal-close.svg" class="close-x"
                                                     alt="close"></button>
                                         </form>
-                                        <img src="../../assets/images/pets-scarlet.jpg" class="modal-image"
-                                            alt="scarlet">
+                                        <img src="../../assets/images/pets-scarlett.jpg" class="modal-image"
+                                            alt="scarlett">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Scarlett</h2>
                                             <p class="modal-subtitle">Dog - Jack Russell Terrier</p>
