refactor: remake link to logo

--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -15,16 +15,10 @@
 <body>
     <header class="header">
         <div class="container header-container">
-            <div class="logo">
-                <a href="../main/index.html" class="logo-link-title">
-                    <h1 class="logo-title">Cozy&nbsp;House</h1>
-                </a>
-                <a href="../main/index.html" class="logo-link-subtitle">
-                    <p class="logo-subtitle">Shelter
-                        for pets
-                        in Boston</p>
-                </a>
-            </div>
+            <a href="../main/index.html" class="logo">
+                <h1 class="logo-title logo-link-title">Cozy&nbsp;House</h1>
+                <p class="logo-subtitle logo-link-subtitle">Shelter for pets in Boston</p>
+            </a>
             <nav class="header-nav">
                 <ul class="header-ul">
                     <li class="header-li"><a href="../main/index.html" class="header-link">About the
