--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -15,10 +15,10 @@
 <body>
     <header class="header">
         <div class="container header-container">
-            <div class="logo">
+            <a href="../main/index.html" class="logo">
                 <h1 class="logo-title">Cozy&nbsp;House</h1>
                 <p class="logo-subtitle">Shelter for pets in Boston</p>
-            </div>
+            </a>
             <nav class="header-nav">
                 <ul class="header-ul">
                     <li class="header-li"><a href="#" class="header-link bottom">About the shelter</a></li>
